# TrafficSimulation

./: .gitignore  CMakeLists.txt  build_log.txt  build_log_utf8.txt  readme.md
data/: CumbraeMap.osm  StNewlynEastMap.osm  config.txt  map.osm
data/maps/: Berkely.osm
data/profilingresults/: benchmark_100.csv  benchmark_1000.csv  benchmark_1100.csv  benchmark_1200.csv  benchmark_1300.csv  benchmark_1400.csv  benchmark_1500.csv  benchmark_1600.csv  benchmark_1700.csv  benchmark_1800.csv  benchmark_1900.csv  benchmark_200.csv  benchmark_2000.csv  benchmark_2100.csv  benchmark_2200.csv  benchmark_2300.csv  benchmark_2400.csv  benchmark_2500.csv  benchmark_300.csv  benchmark_400.csv  benchmark_500.csv  benchmark_600.csv  benchmark_700.csv  benchmark_800.csv  benchmark_900.csv  plot_results.py  run_benchmarks.sh  test.csv
data/profilingresults/map-size-scaling/: plot_new.py  plot_results.py  run_benchmarks.sh
data/profilingresults/map-size-scaling/batching/: benchmark_1000.csv  benchmark_2000.csv  benchmark_3000.csv  benchmark_4000.csv  benchmark_5000.csv  benchmark_6000.csv  benchmark_7000.csv
data/profilingresults/map-size-scaling/no-batching/: benchmark_1000.csv  benchmark_2000.csv  benchmark_3000.csv  benchmark_4000.csv  benchmark_5000.csv  benchmark_6000.csv  benchmark_7000.csv
data/profilingresults/no-quadtree/: benchmark_1300.csv  benchmark_900.csv
data/profilingresults/vehicle-number-scaling/: plot_new.py  plot_results.py  run_benchmarks.sh
data/profilingresults/vehicle-number-scaling/no-quadtree/: benchmark_1000.csv  benchmark_1400.csv  benchmark_1500.csv  benchmark_600.csv  benchmark_700.csv  plot_results.py
data/profilingresults/vehicle-number-scaling/quadtree/: benchmark_1200.csv  benchmark_1300.csv  benchmark_1400.csv  benchmark_1500.csv  benchmark_300.csv  benchmark_400.csv  benchmark_600.csv  benchmark_700.csv  benchmark_900.csv
docs/: TODO.md  WSL_setup_guide.md  readme.md  running_guide.md  setup_and_compilation_guide.md
docs/diagrams/: DAG.txt  class_diagram.txt  class_diagram_simple.txt  parsing_OSM.txt  state_machine.txt  system_architecture.txt  system_architecture_2.txt  threading.txt
include/: Ball.hpp  Benchmarker.hpp  Engine.hpp  Gui.hpp  InputController.hpp  Map.hpp  Object.hpp  Pathfinder.hpp  Quadtree.hpp  Renderer.hpp  Simulation.hpp  ThreadPool.hpp  Vehicle.hpp
src/: Ball.cpp  Benchmarker.cpp  Engine.cpp  Gui.cpp  InputController.cpp  Map.cpp  Pathfinder.cpp  Quadtree.cpp  Renderer.cpp  Simulation.cpp  ThreadPool.cpp  Vehicle.cpp  main.cpp
tests/: CMakeLists.txt  MapTests.cpp  PathfinderTests.cpp  QuadtreeTests.cpp  VehicleTests.cpp
